Closed Bug 601469 Opened 14 years ago Closed 14 years ago

Updater in 10/02 and 10/03 Windows nightly is broken

Categories

(Toolkit :: Application Update, defect)

x86_64
Windows 7
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla2.0b7
Tracking Status
blocking2.0 --- beta7+

People

(Reporter: rjohnson19, Assigned: robert.strong.bugs)

References

Details

Attachments

(1 file, 2 obsolete files)

Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b7pre) Gecko/20101003 Firefox/4.0b7pre (manually downloaded and installed)

1. Download http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2010-10-02-04-mozilla-central/firefox-4.0b7pre.en-US.win32.zip
2. Extract it into a new directory, run firefox.exe with a new profile.
3. Minefield button -> Help -> About Minefield, press Apply Update when the download completes.

Actual Results:
Firefox fails to update and restart. With Task Manager open, I don't see updater.exe appear, although I could be missing it.

Relaunching Firefox triggers the partial update failure dialog, downloading the full update and pressing the Restart button results in the same thing
(Firefox closes but doesn't update and then start up).

Expected Results: "Minefield Update" appears after Firefox closes, update applies and updated Firefox launches.
Confirming on 32bit Windows too, looking at mozillazin forum there are other users with the same problem, so it doesn't seem to be just a isolated conflict.
Error Message:
"The Update could not be installed (patch apply failed)".

App Update Log tells:
AUS:SVC UpdateService:_postUpdateProcessing - install of complete or only one patch offered failed... showing error.
 ----------
AUS:UI gUpdates:onLoad - setting current page to startpage errors
 ----------
AUS:UI gErrorsPage:onPageShow - update.statusText: The Update could not be installed (patch apply failed)
I never see a UAC prompt for either the partial or complete update, and the browser does not relaunch itself.  It appears as if the updater is never launched or exits immediately.
Confirm the same problem for Shredder,
Mozilla/5.0 (Windows NT 5.1; rv:2.0b7pre) Gecko/20101002 Thunderbird/3.3a1pre Build ID: 20101002033350, Application Changeset ID: 51fbb624b47a, Platform Changeset ID: 286d3026ae20
I think that at least understanding what has happened with this particular build blocks.
Severity: major → critical
blocking2.0: --- → ?
Attached image pic (obsolete) —
Attachment #480519 - Attachment mime type: application/octet-stream → text/plain
Updater.exe appears in Process Explorer, but it terminates immediately.
Attached patch patch rev1Splinter Review
Assignee: nobody → robert.bugzilla
Attachment #480518 - Attachment is obsolete: true
Attachment #480519 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #480520 - Flags: review?(dolske)
Blocks: 601495
Blocks: 601500
Comment on attachment 480520 [details] [diff] [review]
patch rev1

Looks fine to me. I also verified that the other changes from bug 600777 are fine, and Rob said he was able to successfully apply an update with an updater containing this fix.
Attachment #480520 - Flags: review?(dolske) → review+
Summary: Update from 10/02/10 to 10/03/10 win32 trunk nightly fails → Updater in 10/02 and 10/03 Windows nightly is broken:w
Summary: Updater in 10/02 and 10/03 Windows nightly is broken:w → Updater in 10/02 and 10/03 Windows nightly is broken
blocking2.0: ? → beta7+
Pushed http://hg.mozilla.org/mozilla-central/rev/7593c4baa1f7
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b7
Also, filed bug 601515 to fix the C-cast that hid this problem in the compile, and bug 601518 for having tests to cover launching the updater from the app.
Just verified that updates are working again on Windows with the latest hourly
Well, updating is still failing.
If you get a patch apply failed you will need to download / install the latest
nightly build from. The build you are using has a bug (specifically Bug 601469)
that breaks the updater
http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-trunk/
I'm running Shredder nightly on old Dell D820 32bit XP SP3.
Mozilla/5.0 (Windows NT 5.1; rv:2.0b7pre) Gecko/20101002 Thunderbird/3.3a1pre 

The nightly build fails to install for me too:
After hitting install-now/restart button, Shredder never restarts. (no lingering processes that I can spot in the process table)

When I restart by hand I get the following dialog box:
Update Failed
there were problems checking for, downloading, or installing this update.  Shredder could not be updated because:

The update could not be installed (patch apply failed).


Per the note above, I will go and find the nightly build and install it.
Verified fixed on Win7 by upgrading to the most recent nightly build: Mozilla/5.0 (Windows NT 6.1; rv:2.0b8pre) Gecko/20101007 Firefox/4.0b8pre
Status: RESOLVED → VERIFIED
Depends on: 601518
Test added in bug 601518
Flags: in-testsuite+
Flags: in-litmus-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: