Bug 601469 - Updater in 10/02 and 10/03 Windows nightly is broken. r=dolske, a=blockingB7