toolkit/xre/nsUpdateDriver.cpp
@@ -403,8 +403,10 @@ ApplyUpdate(nsIFile *greDir, nsIFile *updateDir, nsILocalFile *statusFile,
     rv = parentDir2->GetNativePath(applyToDir);
   }
 #elif defined(XP_WIN)
-  nsAutoString applyToDir;
-  rv = appDir->GetPath(applyToDir);
+  nsAutoString applyToDirW;
+  rv = appDir->GetPath(applyToDirW);
+
+  NS_ConvertUTF16toUTF8 applyToDir(applyToDirW);
 #else
   nsCAutoString applyToDir;
   rv = appDir->GetNativePath(applyToDir);
